# EMSimSirenPINN

./: .gitignore  README.md  pyproject.toml  setup.py
example/: pinn_simulation.ipynb  pinn_simulation2.ipynb  pinn_simulation3.ipynb
src/: SIREN_PINN.py
src/emsimsirenpinn/: SIREN_PINN.py
